--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body{
   margin: 50px auto 20px;
 
   padding: 30px 24px;
-  border: 2px solid white;
-  border-radius: 7%;
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 8%;
 
 }
 
@@ -103,36 +103,49 @@ body{
   width: 100%;
   max-width: 360px;
 
-  border: 3px solid rgba(21, 33, 196, 0.836);
+  border: 4px solid rgb(255, 255, 255);
   border-radius: 30px;
-  background-color: rgba(255,255,255,0.8);
-  color: black;
+  background-color: rgba(43, 43, 43, 0.788);
+  color: rgba(255, 255, 255, 0.856);
 
 }
 
 #notations:hover{
-  border: 3px solid rgba(192, 36, 158, 0.8);
+  border: 4px solid rgba(192, 36, 158, 0.8);
   transition: border 1s;
 }
 
 #notations p{
-  padding: 10px;
+  padding: 14px;
   cursor: default;
   font-size: 20px;
 }
 
 
-@media (max-width: 218px) {
+#testea{
+  margin: auto;
+  width: 100%;
+  max-width: 356px;
+
+  border: 1px solid rgb(78, 39, 253);
+  border-radius: 31px;
+}
+
+@media (max-width: 255px) {
 
   #notations p{
   font-size: 15px;
   }
 }
 
-@media (max-width: 156px) {
+@media (max-width: 179px) {
   #profile img{
     width: 120px;
     height: 110px;
+  }
+
+  #notations p{
+    font-size: 13px;
   }
 }
 
@@ -141,11 +154,20 @@ body{
     width: 100px;
     height: 90px;
   }
+  #notations p{
+    font-size: 10px;
+  }
 
   
 }
 
 @media (max-width: 130px) {
+
+  #profile img{
+    width: 90px;
+    height: 80px;
+  }
+
   #profile img{
     width: 90px;
     height: 80px;
